# RobotArmSim

./: .gitignore  CMakeLists.txt  RobotArmSim.sln  imgui.ini
RobotArmSim/: BasicDemo.cpp  BasicDemo.h  BulletOpenGLApplication.cpp  BulletOpenGLApplication.h  DebugDrawer.cpp  DebugDrawer.h  FreeGLUTCallbacks.h  GameObject.cpp  GameObject.h  OpenGLMotionState.h  RobotArmSim.vcxproj  RobotArmSim.vcxproj.filters  main.cpp
src/core/: Application.cpp  Application.hpp  InverseKinematics.cpp  InverseKinematics.hpp  JointedGripper.cpp  JointedGripper.hpp  JointedLink.cpp  JointedLink2.cpp  JointedLink2.hpp  Robot.cpp  Robot.hpp
src/meshes/: JointedGripperMesh.cpp  JointedGripperMesh.hpp  JointedLinkMesh2.cpp  JointedLinkMesh2.hpp
src/rendering/shaders/: simple_shader.frag
src/resources/: params.txt
